--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bucos Volunteers</title>
+    <title>Volunteers</title>
 </head>
 <body>
     <header>
@@ -15,6 +15,7 @@
         <ul>
             <li><a href="news.html">Новини</a></li>
             <li><a href="support.html">Підтримка волонтерів</a></li>
+            <li><a href="help.html">Подати заявку на допомугу</a></li>
             <li><a href="contact.html">Зв'язок</a></li>
             <li><a href="about.html">Про нас</a></li>
         </ul>
